# paperdigest

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  TODOS.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: smoke-test-crosslinks.md  smoke-test-scaffold.md
paperdigest/: __init__.py  cli.py  config.py  digest.py  extract.py  fetch.py  llm.py  mermaid.py  render.py  scaffold.py  templates.py
tests/: conftest.py  test_cli.py  test_config.py  test_digest.py  test_extract.py  test_fetch.py  test_llm.py  test_mermaid.py  test_render.py  test_scaffold.py  test_scaffold_cli.py  test_scaffold_stages.py  test_scaffold_write.py  test_templates.py
tests/fixtures/: paper.html
